app/styles/app.css
/* ... */
@media (min-width: 768px) {
  .blog-content a {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

.blog-content a:hover {
  -webkit-text-decoration-line: none;
          text-decoration-line: none;
}

.blog-content img {
  max-width: 100%;
}

.blog-content ul {
  margin-bottom: 1rem;
}

.blog-content li {
  margin-left: 2rem;
  margin-top: 0.5rem;
  display: list-item;
  list-style-position: outside;
  list-style-type: disc;
  font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: 400;
  --tw-text-opacity: 1;
  color: rgb(248 245 255 / var(--tw-text-opacity));
}

@media (min-width: 768px) {
  .blog-content li {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

.blog-content code {
  white-space: pre-wrap;
  border-radius: 0.375rem;
  --tw-bg-opacity: 1;
  background-color: rgb(21 9 49 / var(--tw-bg-opacity));
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0.25rem;
  padding-bottom: 1px;
  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
  font-size: 0.75rem;
  line-height: 1rem;
  font-weight: 400;
}

@media (min-width: 768px) {
  .blog-content code {
    font-size: 0.875rem;
    line-height: 1.25rem;
  }
}

.blog-content pre {
  white-space: pre-wrap;
  border-radius: 0.375rem;
  --tw-bg-opacity: 1;
  background-color: rgb(21 9 49 / var(--tw-bg-opacity));
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0px;
  padding-bottom: 1rem;
  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
  font-size: 0.75rem;
  line-height: 1rem;
  font-weight: 400;
  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
  --tw-ring-color: rgb(61 36 117 / var(--tw-ring-opacity));
  --tw-ring-opacity: 0.4;
}

@media (min-width: 768px) {
  .blog-content pre {
    font-size: 0.875rem;
    line-height: 1.25rem;
  }
}

.static {
  position: static;
}

.absolute {
  position: absolute;
}

.relative {
  position: relative;
}

.top-0 {
  top: 0px;
}

.left-0 {
  left: 0px;
}

.bottom-0 {
  bottom: 0px;
}

.z-40 {
  z-index: 40;
}

.z-10 {
  z-index: 10;
}

.m-auto {
  margin: auto;
}

.mx-auto {
  margin-left: auto;
  margin-right: auto;
}

.mx-8 {
  margin-left: 2rem;
  margin-right: 2rem;
}

.my-auto {
  margin-top: auto;
  margin-bottom: auto;
}

.my-6 {
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
}

.mx-2 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.my-2 {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
}

.my-1 {
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
}

.mt-4 {
  margin-top: 1rem;
}

.mt-6 {
  margin-top: 1.5rem;
}

.mt-2 {
  margin-top: 0.5rem;
}

.mt-14 {
  margin-top: 3.5rem;
}

.mt-8 {
  margin-top: 2rem;
}

.mb-0 {
  margin-bottom: 0px;
}

.mt-12 {
  margin-top: 3rem;
}

.mb-32 {
  margin-bottom: 8rem;
}

.ml-2 {
  margin-left: 0.5rem;
}

.mr-auto {
  margin-right: auto;
}

.mb-4 {
  margin-bottom: 1rem;
}

.mb-2 {
  margin-bottom: 0.5rem;
}

.mt-1 {
  margin-top: 0.25rem;
}

.mt-auto {
  margin-top: auto;
}

.ml-4 {
  margin-left: 1rem;
}

.mb-auto {
  margin-bottom: auto;
}

.ml-auto {
  margin-left: auto;
}

.mt-3 {
  margin-top: 0.75rem;
}

.mt-0\.5 {
  margin-top: 0.125rem;
}

.mt-0 {
  margin-top: 0px;
}

.mr-2 {
  margin-right: 0.5rem;
}

.ml-3 {
  margin-left: 0.75rem;
}

.mr-4 {
  margin-right: 1rem;
}

.mb-6 {
  margin-bottom: 1.5rem;
}

.block {
  display: block;
}

.inline-block {
  display: inline-block;
}

.flex {
  display: flex;
}

.table {
  display: table;
}

.grid {
  display: grid;
}

.contents {
  display: contents;
}

.hidden {
  display: none;
}

.h-full {
  height: 100%;
}

.h-auto {
  height: auto;
}

.h-4 {
  height: 1rem;
}

.h-6 {
  height: 1.5rem;
}

.h-px {
  height: 1px;
}

.h-screen {
  height: 100vh;
}

.h-max {
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
}

.h-48 {
  height: 12rem;
}

.h-8 {
  height: 2rem;
}

.h-10 {
  height: 2.5rem;
}

.h-3 {
  height: 0.75rem;
}

.h-2\/5 {
  height: 40%;
}

.h-3\/5 {
  height: 60%;
}

.max-h-full {
  max-height: 100%;
}

.min-h-full {
  min-height: 100%;
}

.w-full {
  width: 100%;
}

.w-auto {
  width: auto;
}

.w-1\/2 {
  width: 50%;
}

.w-56 {
  width: 14rem;
}

.w-max {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.w-screen {
  width: 100vw;
}

.w-96 {
  width: 24rem;
}

.w-8 {
  width: 2rem;
}

.w-10 {
  width: 2.5rem;
}

.w-1\/4 {
  width: 25%;
}

.w-48 {
  width: 12rem;
}

.w-3 {
  width: 0.75rem;
}

.w-0 {
  width: 0px;
}

.w-1\/6 {
  width: 16.666667%;
}

.w-3\/6 {
  width: 50%;
}

.w-2\/6 {
  width: 33.333333%;
}

.min-w-full {
  min-width: 100%;
}

.max-w-3xl {
  max-width: 48rem;
}

.max-w-sm {
  max-width: 24rem;
}

.max-w-7xl {
  max-width: 80rem;
}

.max-w-4xl {
  max-width: 56rem;
}

.flex-1 {
  flex: 1 1 0%;
}

.flex-shrink {
  flex-shrink: 1;
}

.flex-shrink-0 {
  flex-shrink: 0;
}

.flex-grow-0 {
  flex-grow: 0;
}

.flex-grow {
  flex-grow: 1;
}

@-webkit-keyframes fade-in-down {
  0% {
    opacity: 0;
    transform: translateY(-18px);
  }

  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes fade-in-down {
  0% {
    opacity: 0;
    transform: translateY(-18px);
  }

  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

.animate-fade-in-down {
  -webkit-animation: fade-in-down 700ms ease-in-out 300ms forwards;
          animation: fade-in-down 700ms ease-in-out 300ms forwards;
}
/* ... */

